--- a/main.css
+++ b/main.css
@@ -3,13 +3,14 @@ body {
 }
 
 h2 {
-  color: white;
+  color: #0C2340;
   text-align: center;
   font-family: verdana;
 }
 
 p {
-  color: white;
-  font-family: verdana;
+  color: #C99700;
+  text-align: center;
+  font-family: courier new;
 }
 
