--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+div{
+
+}
+
+.head1{
+  background-color: #0C2340;
+  border: 2px solid white;
+}
+
 body {
   background-color: lightblue;
 }
@@ -11,6 +20,6 @@ h2 {
 p {
   color: #C99700;
   text-align: center;
-  font-family: courier new bold;
+  font-family: courier new;
 }
 
