--- a/main.css
+++ b/main.css
@@ -12,6 +12,11 @@ body {
   padding: 20px;
 }
 
+h1 {
+  color: white;
+  text-align: center;
+  font-family: courier new;
+}
 
 h2 {
   color: #0C2340;
