--- a/main.css
+++ b/main.css
@@ -10,6 +10,29 @@ body {
   background-color: #C99700;
   text-align:center;
 }
+.menu {
+    position: sticky;
+    top: 0;
+    background-color: #00843D;
+    padding: 10px 0px 10px 0px;
+    color: white;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.menu a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.menu-log {
+    right: auto;
+    float: right;
+}
 
 h1 {
   color: white;
