--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body,html {
   height: 100%;
-  background-color: #C99700;
+  background-color: #b3d9ff;
 
 }
 .head1{
@@ -10,7 +10,7 @@ body,html {
   height: 100%;
 }
 .head2{
-  background-color: #C99700;
+  background-color: #b3d9ff;
   text-align:center;
   height: 100%;
 }
