--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body,html {
   height: 100%;
+  width: 100%;
   background-color: #b3d9ff;
 
 }
@@ -53,7 +54,7 @@ h2 {
 }
 
 p {
-  color: grey;
+  color: #7393B3;
   text-align: center;
   font-family: courier new;
   padding: 10 px;
