Fix the weird stuff and change color

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body,html {
   height: 100%;
-  width: 100%;
   background-color: #b3d9ff;
 
 }
@@ -9,7 +8,6 @@ body,html {
   text-align: center;
   padding: 20px;
   height: 100%;
-  width: 100%;
 }
 .head2{
   background-color: #b3d9ff;
@@ -54,7 +52,7 @@ h2 {
 }
 
 p {
-  color: #7393B3;
+  color: #0C2340;
   text-align: center;
   font-family: courier new;
   padding: 10 px;
